[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/join.png" type="Texture" id=1]
[ext_resource path="res://Levels/host.png" type="Texture" id=2]
[ext_resource path="res://LevelManagers/networking.gd" type="Script" id=3]
[ext_resource path="res://Levels/startgame.png" type="Texture" id=4]

[node name="HostOrJoinServer" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtonSection" type="CenterContainer" parent="Columns"]
margin_right = 150.0
margin_bottom = 304.0

[node name="Rows" type="VBoxContainer" parent="Columns/MainButtonSection"]
margin_right = 150.0
margin_bottom = 304.0

[node name="Host" type="TextureButton" parent="Columns/MainButtonSection/Rows"]
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 2 )

[node name="Join" type="TextureButton" parent="Columns/MainButtonSection/Rows"]
margin_top = 154.0
margin_right = 150.0
margin_bottom = 304.0
texture_normal = ExtResource( 1 )

[node name="InputSection" type="CenterContainer" parent="Columns"]
margin_left = 154.0
margin_right = 212.0
margin_bottom = 304.0

[node name="Rows" type="VBoxContainer" parent="Columns/InputSection"]
margin_top = 112.0
margin_right = 58.0
margin_bottom = 192.0

[node name="NameInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_right = 58.0
margin_bottom = 24.0
placeholder_text = "Name"

[node name="IPInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 28.0
margin_right = 58.0
margin_bottom = 52.0
placeholder_text = "IP"

[node name="PortInput" type="LineEdit" parent="Columns/InputSection/Rows"]
margin_top = 56.0
margin_right = 58.0
margin_bottom = 80.0
placeholder_text = "Port"

[node name="StartGameSection" type="CenterContainer" parent="Columns"]
margin_left = 216.0
margin_right = 366.0
margin_bottom = 304.0

[node name="Rows" type="VBoxContainer" parent="Columns/StartGameSection"]
margin_top = 77.0
margin_right = 150.0
margin_bottom = 227.0

[node name="StartGame" type="TextureButton" parent="Columns/StartGameSection/Rows"]
margin_right = 150.0
margin_bottom = 150.0
texture_normal = ExtResource( 4 )
[connection signal="pressed" from="Columns/MainButtonSection/Rows/Host" to="." method="start_server"]
[connection signal="pressed" from="Columns/MainButtonSection/Rows/Join" to="." method="start_client"]
[connection signal="pressed" from="Columns/StartGameSection/Rows/StartGame" to="." method="start_game"]
